--- a/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/nmapvuln.html
+++ b/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/nmapvuln.html
@@ -54,7 +54,7 @@
 <h1>Scan Report<br><small>Nmap 7.92</small>
 </h1>
 <pre style="white-space:pre-wrap; word-wrap:break-word;">nmap -sV --script vulners --script-args mincvss=5.0 -oA /data/nmapvuln telescoop.fr</pre>
-<p class="lead">Sun Nov 19 00:23:25 2023 – Sun Nov 19 00:23:41 2023<br>1 hosts scanned.
+<p class="lead">Sun Nov 26 00:23:01 2023 – Sun Nov 26 00:23:17 2023<br>1 hosts scanned.
               1 hosts up.
               0 hosts down.
             </p>
@@ -78,7 +78,7 @@
 <td><span class="label label-success">up</span></td>
 <td>51.210.109.110</td>
 <td>telescoop.fr</td>
-<td>2</td>
+<td>3</td>
 <td>0</td>
 </tr></tbody>
 </table></div>
@@ -110,6 +110,16 @@
 <th>Extra Info</th>
 </tr></thead>
 <tbody>
+<tr class="success">
+<td title="Port">25</td>
+<td title="Protocol">tcp</td>
+<td title="State / Reason">open<br>syn-ack</td>
+<td title="Service">smtp</td>
+<td title="Product">Postfix smtpd</td>
+<td title="Version"></td>
+<td title="Extra Info"></td>
+</tr>
+<tr><td colspan="7"><a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:postfix:postfix">cpe:/a:postfix:postfix</a></td></tr>
 <tr class="success">
 <td title="Port">80</td>
 <td title="Protocol">tcp</td>
@@ -150,6 +160,16 @@
 <th>Extra info</th>
 </tr></thead>
 <tbody>
+<tr>
+<td>51.210.109.110 - telescoop.fr</td>
+<td>25</td>
+<td>tcp</td>
+<td>smtp</td>
+<td>Postfix smtpd</td>
+<td></td>
+<td>cpe:/a:postfix:postfix</td>
+<td></td>
+</tr>
 <tr>
 <td>51.210.109.110 - telescoop.fr</td>
 <td>80</td>
