--- a/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/nmapvuln.html
+++ b/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/nmapvuln.html
@@ -54,7 +54,7 @@
 <h1>Scan Report<br><small>Nmap 7.92</small>
 </h1>
 <pre style="white-space:pre-wrap; word-wrap:break-word;">nmap -sV --script vulners --script-args mincvss=5.0 -oA /data/nmapvuln telescoop.fr</pre>
-<p class="lead">Sun Jun  2 00:22:15 2024 – Sun Jun  2 00:22:33 2024<br>1 hosts scanned.
+<p class="lead">Sun Jun  9 00:24:43 2024 – Sun Jun  9 00:25:03 2024<br>1 hosts scanned.
               1 hosts up.
               0 hosts down.
             </p>
@@ -126,22 +126,25 @@
 <td title="State / Reason">open<br>syn-ack</td>
 <td title="Service">http</td>
 <td title="Product">nginx</td>
-<td title="Version">1.18.0</td>
+<td title="Version">1.24.0</td>
 <td title="Extra Info">Ubuntu</td>
 </tr>
-<tr><td colspan="7"><a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.18.0">cpe:/a:igor_sysoev:nginx:1.18.0</a></td></tr>
+<tr><td colspan="7">
+<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.24.0">cpe:/a:igor_sysoev:nginx:1.24.0</a><h5>http-server-header</h5>
+<pre style="white-space:pre-wrap; word-wrap:break-word;">nginx/1.24.0 (Ubuntu)</pre>
+</td></tr>
 <tr class="success">
 <td title="Port">443</td>
 <td title="Protocol">tcp</td>
 <td title="State / Reason">open<br>syn-ack</td>
 <td title="Service">http</td>
 <td title="Product">nginx</td>
-<td title="Version">1.18.0</td>
+<td title="Version">1.24.0</td>
 <td title="Extra Info">Ubuntu</td>
 </tr>
 <tr><td colspan="7">
-<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.18.0">cpe:/a:igor_sysoev:nginx:1.18.0</a><h5>http-server-header</h5>
-<pre style="white-space:pre-wrap; word-wrap:break-word;">nginx/1.18.0 (Ubuntu)</pre>
+<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.24.0">cpe:/a:igor_sysoev:nginx:1.24.0</a><h5>http-server-header</h5>
+<pre style="white-space:pre-wrap; word-wrap:break-word;">nginx/1.24.0 (Ubuntu)</pre>
 </td></tr>
 </tbody>
 </table></div>
@@ -176,8 +179,8 @@
 <td>tcp</td>
 <td>http</td>
 <td>nginx</td>
-<td>1.18.0</td>
-<td>cpe:/a:igor_sysoev:nginx:1.18.0</td>
+<td>1.24.0</td>
+<td>cpe:/a:igor_sysoev:nginx:1.24.0</td>
 <td>Ubuntu</td>
 </tr>
 <tr>
@@ -186,8 +189,8 @@
 <td>tcp</td>
 <td>http</td>
 <td>nginx</td>
-<td>1.18.0</td>
-<td>cpe:/a:igor_sysoev:nginx:1.18.0</td>
+<td>1.24.0</td>
+<td>cpe:/a:igor_sysoev:nginx:1.24.0</td>
 <td>Ubuntu</td>
 </tr>
 </tbody>
