--- a/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/testssl.html
@@ -21,11 +21,11 @@
 ###########################################################</span>
 
  Using &quot;OpenSSL 1.0.2-bad (1.0.2k-dev)&quot; [~183 ciphers]
- on fv-az985-174:/home/testssl/bin/openssl.Linux.x86_64
+ on fv-az1198-814:/home/testssl/bin/openssl.Linux.x86_64
  (built: &quot;Sep  1 14:03:44 2022&quot;, platform: &quot;linux-x86_64&quot;)
 
 
-<span style="color:white;background-color:black;"> Start 2024-06-02 00:21:25                --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-06-09 00:23:09                --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
 
  rDNS (51.210.109.110):  vps-170f9001.vps.ovh.net.
  Service detected:       HTTP
@@ -84,9 +84,9 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="text-decoration:underline;font-weight:bold;"> Testing server defaults (Server Hello) </span>
 
 <span style="font-weight:bold;"> TLS extensions (standard)    </span>&quot;renegotiation info/#65281&quot; &quot;server name/#0&quot;
-                              &quot;EC point formats/#11&quot; &quot;next protocol/#13172&quot;
-                              &quot;supported versions/#43&quot; &quot;key share/#51&quot;
-                              &quot;supported_groups/#10&quot; &quot;max fragment length/#1&quot;
+                              &quot;EC point formats/#11&quot; &quot;supported versions/#43&quot;
+                              &quot;key share/#51&quot; &quot;supported_groups/#10&quot;
+                              &quot;max fragment length/#1&quot;
                               &quot;application layer protocol negotiation/#16&quot;
                               &quot;extended master secret/#23&quot;
 <span style="font-weight:bold;"> Session Ticket RFC 5077 hint </span>no -- no lifetime advertised
@@ -99,16 +99,15 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Server key size              </span>EC <span style="color:#008817;">256</span> bits (curve P-256)
 <span style="font-weight:bold;"> Server key usage             </span>Digital Signature
 <span style="font-weight:bold;"> Server extended key usage    </span>TLS Web Server Authentication, TLS Web Client Authentication
-<span style="font-weight:bold;"> Serial                       </span>04E1DAAB89F9581018E9A3DF24CEEF78902F (OK: length 18)
-<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 45E5A3AC75E74CDAF5F81B6318FB0327BC82167F
-                              SHA256 531D62D4A1CA71E28992D86B5ECB7F96115A4556D7B19746E9CB959DC88F8B0F
-<span style="font-weight:bold;"> Common Name (CN)             </span><i>telescoop.fr </i> (CN in response to request w/o SNI: <i>www.yeswebike.fr </i>)
-<span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>revolution.telescoop.fr telescoop.fr
-                              www.telescoop.fr </i>
+<span style="font-weight:bold;"> Serial                       </span>04AC0447849990C38DA1E9468B6439AB7239 (OK: length 18)
+<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 75EBF3CD71F47ECE68809CDA11E3972CFD75AD43
+                              SHA256 B8AD0D452CE4B58EB4F92F0282787C95784729536E727EF9AC44C929B35DD67D
+<span style="font-weight:bold;"> Common Name (CN)             </span><i>telescoop.fr </i> (CN in response to request w/o SNI: <i>fresquedelabiodiversite.org </i>)
+<span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>telescoop.fr www.telescoop.fr </i>
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">44 &gt;= 30 days</span> (2024-04-17 07:21 --&gt; 2024-07-16 07:21)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">85 &gt;= 30 days</span> (2024-06-04 08:07 --&gt; 2024-09-02 08:07)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r3.o.lencr.org
@@ -128,7 +127,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> HTTP clock skew              </span>0 sec from localtime
 <span style="font-weight:bold;"> Strict Transport Security    </span><span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> Public Key Pinning           </span>--
-<span style="font-weight:bold;"> Server banner                </span>nginx/<span style="color:#8a7237;">1</span>.<span style="color:#8a7237;">1</span><span style="color:#8a7237;">8</span>.<span style="color:#8a7237;">0</span> (<span style="color:#8a7237;font-weight:bold;">Ubuntu</span>)
+<span style="font-weight:bold;"> Server banner                </span>nginx/<span style="color:#8a7237;">1</span>.<span style="color:#8a7237;">2</span><span style="color:#8a7237;">4</span>.<span style="color:#8a7237;">0</span> (<span style="color:#8a7237;font-weight:bold;">Ubuntu</span>)
 <span style="font-weight:bold;"> Application banner           </span>--
 <span style="font-weight:bold;"> Cookie(s)                    </span>(none issued at &quot;/&quot;) -- maybe better try target URL of 30x
 <span style="font-weight:bold;"> Security headers             </span><span style="color:#c05600;">--</span>
@@ -210,7 +209,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A</span>
 <span style="font-weight:bold;"> Grade cap reasons            </span>Grade capped to A. HSTS is not offered
 
-<span style="color:white;background-color:black;"> Done 2024-06-02 00:22:14 [  51s] --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-06-09 00:24:40 [  93s] --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
 
 
 </pre>
