--- a/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/testssl.html
@@ -21,11 +21,11 @@
 ###########################################################</span>
 
  Using &quot;OpenSSL 1.0.2-bad (1.0.2k-dev)&quot; [~183 ciphers]
- on fv-az1245-288:/home/testssl/bin/openssl.Linux.x86_64
+ on fv-az1984-724:/home/testssl/bin/openssl.Linux.x86_64
  (built: &quot;Sep  1 14:03:44 2022&quot;, platform: &quot;linux-x86_64&quot;)
 
 
-<span style="color:white;background-color:black;"> Start 2024-07-28 00:25:35                --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-08-04 00:25:40                --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
 
  rDNS (51.210.109.110):  vps-170f9001.vps.ovh.net.
  Service detected:       HTTP
@@ -95,29 +95,29 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> TLS clock skew</span>               Random values, no fingerprinting possible 
 <span style="font-weight:bold;"> Certificate Compression      </span>none
 <span style="font-weight:bold;"> Client Authentication        </span>none
-<span style="font-weight:bold;"> Signature Algorithm          </span><span style="color:#008817;">SHA256 with RSA</span>
+<span style="font-weight:bold;"> Signature Algorithm          </span><span style="color:#008817;">ECDSA with SHA384</span>
 <span style="font-weight:bold;"> Server key size              </span>EC <span style="color:#008817;">256</span> bits (curve P-256)
 <span style="font-weight:bold;"> Server key usage             </span>Digital Signature
 <span style="font-weight:bold;"> Server extended key usage    </span>TLS Web Server Authentication, TLS Web Client Authentication
-<span style="font-weight:bold;"> Serial                       </span>04AC0447849990C38DA1E9468B6439AB7239 (OK: length 18)
-<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 75EBF3CD71F47ECE68809CDA11E3972CFD75AD43
-                              SHA256 B8AD0D452CE4B58EB4F92F0282787C95784729536E727EF9AC44C929B35DD67D
+<span style="font-weight:bold;"> Serial                       </span>04F6C33E4CA0D119651E1087374BE6F23F94 (OK: length 18)
+<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 F94063208466D4F0835AA2A6AE3588DDD533B81F
+                              SHA256 1B8197AE9FF7883972F5C942B850017037847399855435CAA37934242F04A17E
 <span style="font-weight:bold;"> Common Name (CN)             </span><i>telescoop.fr </i> (CN in response to request w/o SNI: <i>fresquedelabiodiversite.org </i>)
 <span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>telescoop.fr www.telescoop.fr </i>
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">36 &gt;= 30 days</span> (2024-06-04 08:07 --&gt; 2024-09-02 08:07)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">89 &gt;= 30 days</span> (2024-08-03 13:28 --&gt; 2024-11-01 13:28)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
-<span style="font-weight:bold;"> OCSP URI                     </span>http://r3.o.lencr.org
+<span style="font-weight:bold;"> OCSP URI                     </span>http://e6.o.lencr.org
 <span style="font-weight:bold;"> OCSP stapling                </span><span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> OCSP must staple extension   </span>--
 <span style="font-weight:bold;"> DNS CAA RR</span> (experimental)    <span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> Certificate Transparency     </span><span style="color:#008817;">yes</span> (certificate extension)
 <span style="font-weight:bold;"> Certificates provided</span>        2
-<span style="font-weight:bold;"> Issuer                       </span><i>R3</i> (<i>Let&apos;s Encrypt</i> from <i>US</i>)
-<span style="font-weight:bold;"> Intermediate cert validity   </span>#1: <span style="color:#008817;">ok &gt; 40 days</span> (2025-09-15 16:00). <i>R3</i> &lt;-- <i>ISRG Root X1</i>
+<span style="font-weight:bold;"> Issuer                       </span><i>E6</i> (<i>Let&apos;s Encrypt</i> from <i>US</i>)
+<span style="font-weight:bold;"> Intermediate cert validity   </span>#1: <span style="color:#008817;">ok &gt; 40 days</span> (2027-03-12 23:59). <i>E6</i> &lt;-- <i>ISRG Root X1</i>
 <span style="font-weight:bold;"> Intermediate Bad OCSP</span> (exp.) <span style="color:#008817;">Ok</span>
 
 
@@ -209,7 +209,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A</span>
 <span style="font-weight:bold;"> Grade cap reasons            </span>Grade capped to A. HSTS is not offered
 
-<span style="color:white;background-color:black;"> Done 2024-07-28 00:27:06 [  94s] --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-08-04 00:26:27 [  49s] --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
 
 
 </pre>
