--- a/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/nmapvuln.html
+++ b/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/nmapvuln.html
@@ -54,7 +54,7 @@
 <h1>Scan Report<br><small>Nmap 7.92</small>
 </h1>
 <pre style="white-space:pre-wrap; word-wrap:break-word;">nmap -sV --script vulners --script-args mincvss=5.0 -oA /data/nmapvuln telescoop.fr</pre>
-<p class="lead">Sun Jan  5 00:29:05 2025 – Sun Jan  5 00:29:22 2025<br>1 hosts scanned.
+<p class="lead">Sun Jan 12 00:29:27 2025 – Sun Jan 12 00:29:44 2025<br>1 hosts scanned.
               1 hosts up.
               0 hosts down.
             </p>
@@ -130,7 +130,11 @@
 <td title="Extra Info">Ubuntu</td>
 </tr>
 <tr><td colspan="7">
-<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.24.0">cpe:/a:igor_sysoev:nginx:1.24.0</a><h5>http-server-header</h5>
+<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.24.0">cpe:/a:igor_sysoev:nginx:1.24.0</a><h5>vulners</h5>
+<pre style="white-space:pre-wrap; word-wrap:break-word;">
+  nginx 1.24.0: 
+    	ADDC71B8-6024-11EF-86A1-8C164567CA3C	5.7	https://vulners.com/freebsd/ADDC71B8-6024-11EF-86A1-8C164567CA3C</pre>
+<h5>http-server-header</h5>
 <pre style="white-space:pre-wrap; word-wrap:break-word;">nginx/1.24.0 (Ubuntu)</pre>
 </td></tr>
 <tr class="success">
@@ -143,7 +147,11 @@
 <td title="Extra Info">Ubuntu</td>
 </tr>
 <tr><td colspan="7">
-<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.24.0">cpe:/a:igor_sysoev:nginx:1.24.0</a><h5>http-server-header</h5>
+<a href="https://nvd.nist.gov/vuln/search/results?form_type=Advanced&amp;cves=on&amp;cpe_version=cpe:/a:igor_sysoev:nginx:1.24.0">cpe:/a:igor_sysoev:nginx:1.24.0</a><h5>vulners</h5>
+<pre style="white-space:pre-wrap; word-wrap:break-word;">
+  nginx 1.24.0: 
+    	ADDC71B8-6024-11EF-86A1-8C164567CA3C	5.7	https://vulners.com/freebsd/ADDC71B8-6024-11EF-86A1-8C164567CA3C</pre>
+<h5>http-server-header</h5>
 <pre style="white-space:pre-wrap; word-wrap:break-word;">nginx/1.24.0 (Ubuntu)</pre>
 </td></tr>
 </tbody>
