--- a/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly90ZWxlc2Nvb3AuZnI=/testssl.html
@@ -10,7 +10,7 @@
 <pre>
 <span style="font-weight:bold;">
 #####################################################################</span>
-  <span style="font-weight:bold;">testssl.sh</span> version <span style="font-weight:bold;">3.2rc3</span> from <a href="https://testssl.sh/dev/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/dev/</a>
+  <span style="font-weight:bold;">testssl.sh</span> version <span style="font-weight:bold;">3.2rc4</span> from <a href="https://testssl.sh/dev/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/dev/</a>
 <span style="font-weight:bold;">
   This program is free software. Distribution and modification under
   GPLv2 permitted. USAGE w/o ANY WARRANTY. USE IT AT YOUR OWN RISK!</span>
@@ -20,9 +20,9 @@
 #####################################################################</span>
 
   Using <i>OpenSSL 1.0.2-bad </i>  [~183 ciphers]
-  on fv-az1344-979:/home/testssl/bin/openssl.Linux.x86_64
+  on fv-az1391-799:/home/testssl/bin/openssl.Linux.x86_64
 
-<span style="color:white;background-color:black;"> Start 2025-01-19 00:27:54                --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2025-01-26 00:25:37                --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
 
  rDNS (51.210.109.110):  vps-170f9001.vps.ovh.net.
  Service detected:       HTTP
@@ -103,7 +103,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">42 &gt;= 30 days</span> (2024-12-02 03:08 --&gt; 2025-03-02 03:08)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">35 &gt;= 30 days</span> (2024-12-02 03:08 --&gt; 2025-03-02 03:08)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://e6.o.lencr.org
@@ -123,7 +123,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> HTTP clock skew              </span>0 sec from localtime
 <span style="font-weight:bold;"> Strict Transport Security    </span><span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> Public Key Pinning           </span>--
-<span style="font-weight:bold;"> Server banner                </span>nginx/<span style="color:#8a7237;">1</span>.<span style="color:#8a7237;">2</span><span style="color:#8a7237;">4</span>.<span style="color:#8a7237;">0</span> (<span style="color:#8a7237;font-weight:bold;">Ubuntu</span>)
+<span style="font-weight:bold;"> Server banner                </span>nginx/<span style="color:#8a7237;">1</span>.<span style="color:#8a7237;">2</span><span style="color:#8a7237;">4</span>.<span style="color:#8a7237;">0</span> (<span style="color:#8a7237;font-weight:bold;">Ubuntu</span>)&apos;
 <span style="font-weight:bold;"> Application banner           </span>--
 <span style="font-weight:bold;"> Cookie(s)                    </span>(none issued at &quot;/&quot;) -- maybe better try target URL of 30x
 <span style="font-weight:bold;"> Security headers             </span><span style="color:#c05600;">--</span>
@@ -205,7 +205,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A</span>
 <span style="font-weight:bold;"> Grade cap reasons            </span>Grade capped to A. HSTS is not offered
 
-<span style="color:white;background-color:black;"> Done 2025-01-19 00:29:26 [  95s] --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2025-01-26 00:26:24 [  51s] --&gt;&gt; 51.210.109.110:443 (telescoop.fr) &lt;&lt;--</span>
 
 
 </pre>
